--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -6,7 +6,7 @@
   background: linear-gradient(
     90deg,
     rgba(0, 0, 0, 1) 0%,
-    rgba(1, 1, 17, 1) 35%,
+    rgba(1, 7, 17, 1) 100%,
     rgba(163, 1, 212, 1) 100%
   );
 }
@@ -30,13 +30,14 @@
 
 .header-button {
   width: 5rem;
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   border-radius: 20px;
   text-align: center;
 }
 
 .header-button:hover {
-  border: 2px solid rgb(255, 255, 255);
-  color: white;
+  border: 2px solid rgb(140, 0, 175);
+  color: rgb(140, 0, 175);
   transition: 0.4s ease-in-out;
 }
