--- a/src/Components/Body/index.css
+++ b/src/Components/Body/index.css
@@ -7,5 +7,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url(./Images//background.png);
+  background-image: url(../Images/background.png);
 }
