--- a/src/Components/SignUp/index.css
+++ b/src/Components/SignUp/index.css
@@ -20,3 +20,11 @@ h2 {
   color: rgb(140, 0, 175);
   font-family: 'Ma Shan Zheng';
 }
+
+p {
+  margin: 0.1rem;
+  padding: 0.1rem;
+  text-align: center;
+  font-size: 1.2rem;
+  color: red;
+}
