--- a/src/Components/SignIn/index.css
+++ b/src/Components/SignIn/index.css
@@ -22,6 +22,9 @@ h2 {
 }
 
 p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0.1rem;
   padding: 0.1rem;
   text-align: center;
