--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -1,5 +1,47 @@
 .profile {
-  height: 75vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.movie {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 25rem;
+  height: 30rem;
+  margin: 0.2rem;
+  padding: 0.1rem;
+}
+
+.movie__title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
+
+.movie__image {
+  width: 15rem;
+  height: 22rem;
+}
+
+.movie__description {
+  padding: 0.1rem;
+  margin: 0.1rem;
+  font-size: 1rem;
+}
+
+.movie__country,
+.movie__year,
+.movie__genre,
+.movie__duration,
+.movie__rating {
+  padding: 0.1rem;
+  margin: 0.1rem;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
 }
 
 span {
