--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -2,61 +2,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.movie {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 25rem;
-  height: 30rem;
-  margin: 0.2rem;
-  padding: 0.1rem;
-}
-
-.movie-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 20rem;
-  height: 25rem;
-  padding: 0.2rem;
-  margin: 1rem;
-  background: rgba(255, 255, 255, 0.096);
-  border-radius: 20px;
-  text-align: center;
-}
-
-h4 {
-  color: rgb(255, 255, 255);
-}
-
-.movie__title {
-  font-size: 2rem;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
-}
-
-.movie__description {
-  padding: 0.1rem;
-  margin: 0.1rem;
-  font-size: 0.5rem;
-  color: rgb(255, 255, 255);
-}
-
-.movie__country,
-.movie__year,
-.movie__genre,
-.movie__duration,
-.movie__rating {
-  padding: 0.1rem;
-  margin: 0.1rem;
-  color: rgb(255, 255, 255);
-  font-size: 1rem;
-}
-
-span {
-  color: red;
-  font-size: 4rem;
+  min-height: 75vh;
 }
