--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -4,3 +4,40 @@
   justify-content: center;
   min-height: 75vh;
 }
+
+.error {
+  color: rgb(255, 255, 255);
+}
+
+.loading {
+  display: inline-block;
+  position: relative;
+  width: 30rem;
+  height: 30rem;
+}
+.loading div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: loading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.loading div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes loading {
+  0% {
+    top: 15rem;
+    left: 15rem;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 30rem;
+    height: 30rem;
+    opacity: 0;
+  }
+}
