--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -1,8 +1,31 @@
 .profile {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 75vh;
+}
+
+.profile__container {
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  min-height: 75vh;
+}
+
+.profile__search {
+  margin: 1rem;
+  width: 40rem;
+  border-radius: 20px;
+  cursor: auto;
+}
+
+input[type='text'] {
+  padding: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.185);
+  font-size: 1.3rem;
+}
+
+::placeholder {
+  color: rgb(183, 50, 216);
 }
 
 .error {
