--- a/src/Components/MovieById/index.css
+++ b/src/Components/MovieById/index.css
@@ -1,10 +1,21 @@
-.movie-id {
+.movieId {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  min-height: 70.1vh;
+  flex-direction: column;
+  align-items: center;
+  min-height: 74vh;
 }
 
-h1 {
+button {
+  padding: 1rem;
+}
+
+.description {
+  margin: 1rem;
+  padding: 1rem;
+  width: 60%;
   color: rgb(255, 255, 255);
+}
+
+.previous-page {
+  width: 100%;
 }
