--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -11,14 +11,57 @@
   justify-content: center;
 }
 
-.next-page {
-  padding: 0;
-  margin: 0;
+.movie__container {
+  text-align: center;
+  padding: 0.5rem;
+  margin: 1rem;
+  height: 38rem;
+  width: 20rem;
+  background: rgba(0, 0, 0, 0.842);
+  border-radius: 20px;
 }
 
-button {
-  padding: 1rem;
-  margin: 0.3rem;
+.movie__title {
+  font-size: 2.2rem;
+  font-family: 'Ma Shan Zheng';
+}
+
+.movie__year,
+.movie__rating {
+  font-family: 'Ma Shan Zheng';
+  font-size: 1.5rem;
+}
+
+.movie__container:hover {
+  transform: scale(1.02);
+  transition: 0.4s ease-in-out;
+}
+
+.movie__details {
+  color: rgb(183, 50, 216);
+  text-decoration: none !important;
+}
+
+.movie__details:hover {
+  color: rgb(183, 50, 216);
+  transition: 0.4s ease-in-out;
+}
+
+.movie__image {
+  width: 100%;
+  height: 70%;
+}
+
+.button__favourites {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 1.5rem;
+  background: transparent;
+  border: 2px solid rgb(183, 50, 216);
+  border-radius: 20px;
+  color: rgb(255, 255, 255);
 }
 
 .profile__search {
@@ -33,6 +76,7 @@ input[type='text'] {
   background-color: rgba(5, 5, 5, 0.185);
   font-size: 1.3rem;
   color: rgb(183, 50, 216);
+  border: 2px solid rgb(183, 50, 216);
 }
 
 ::placeholder {
