--- a/src/Components/Personal/index.css
+++ b/src/Components/Personal/index.css
@@ -5,6 +5,31 @@
   min-height: 75vh;
 }
 
-h1 {
+p {
   color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.previous-page {
+  height: 10%;
+}
+
+.user-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.button__user-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 100%;
+  height: 8%;
+  background: transparent;
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(140, 0, 175);
+  border-radius: 20px;
 }
