--- a/src/Components/Admin/index.css
+++ b/src/Components/Admin/index.css
@@ -97,35 +97,68 @@
   color: rgb(255, 255, 255);
 }
 
-.loading {
-  display: inline-block;
-  position: relative;
-  width: 30rem;
-  height: 30rem;
-}
-.loading div {
+.loader {
   position: absolute;
-  border: 4px solid #fff;
-  opacity: 1;
+  top: calc(50% - 7rem);
+  left: calc(50% - 7rem);
+  width: 13rem;
+  height: 13rem;
   border-radius: 50%;
-  animation: loading 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  perspective: 800px;
 }
-.loading div:nth-child(2) {
-  animation-delay: -0.5s;
+
+.inner {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
-@keyframes loading {
+
+.inner.one {
+  left: 0%;
+  top: 0%;
+  animation: rotate-one 1s linear infinite;
+  border-bottom: 3px solid rgb(183, 50, 216);
+}
+
+.inner.two {
+  right: 0%;
+  top: 0%;
+  animation: rotate-two 1s linear infinite;
+  border-right: 3px solid rgb(183, 50, 216);
+}
+
+.inner.three {
+  right: 0%;
+  bottom: 0%;
+  animation: rotate-three 1s linear infinite;
+  border-top: 3px solid rgb(183, 50, 216);
+}
+
+@keyframes rotate-one {
   0% {
-    top: 15rem;
-    left: 15rem;
-    width: 0;
-    height: 0;
-    opacity: 1;
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
   }
   100% {
-    top: 0px;
-    left: 0px;
-    width: 30rem;
-    height: 30rem;
-    opacity: 0;
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-two {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-three {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
