--- a/src/Components/Body/SignUpSection/index.css
+++ b/src/Components/Body/SignUpSection/index.css
@@ -9,6 +9,7 @@
 
 .container-title {
   font-size: 6rem;
+  font-weight: bold;
   padding: 0.2rem;
   margin: 0.2rem;
   color: rgb(183, 50, 216);
@@ -18,6 +19,7 @@
   padding: 0.2rem;
   margin: 0.2rem;
   font-size: 4rem;
+  font-weight: bold;
   color: rgb(183, 50, 216);
   background: transparent;
   cursor: pointer;
