--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -12,6 +12,7 @@
 }
 
 .header-buttons {
+  margin-top: 1rem;
   display: flex;
   list-style-type: none;
 }
@@ -30,10 +31,14 @@
 }
 
 .header-button {
-  width: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 8rem;
+  height: 2.5rem;
   margin: 0.5rem;
   padding: 0.5rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: rgb(183, 50, 216);
   border: 2px solid rgb(183, 50, 216);
   border-radius: 20px;
