--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -15,19 +15,22 @@
   text-align: center;
   padding: 0.5rem;
   margin: 1rem;
-  height: 38rem;
-  width: 20rem;
+  height: 30rem;
+  width: 18rem;
   background: rgba(0, 0, 0, 0.842);
   border-radius: 20px;
 }
 
 .movie__title {
-  font-size: 2.2rem;
+  font-size: 1.4rem;
+  font-weight: bold;
 }
 
 .movie__year,
 .movie__rating {
-  font-size: 1.5rem;
+  margin: 0.3rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .movie__container:hover {
@@ -47,7 +50,7 @@
 
 .movie__image {
   width: 100%;
-  height: 70%;
+  height: 71%;
 }
 
 .button__favourites {
@@ -55,7 +58,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 3rem;
+  height: 2.8rem;
   background: transparent;
   border: 2px solid rgb(183, 50, 216);
   border-radius: 20px;
