feat: added media queries for mobile devices

--- a/src/Components/Admin/index.css
+++ b/src/Components/Admin/index.css
@@ -162,3 +162,13 @@
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
+
+@media screen and (max-width: 1115px) {
+  .admin-profile {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+  }
+}
