--- a/src/Components/Body/TeleSection/index.css
+++ b/src/Components/Body/TeleSection/index.css
@@ -4,6 +4,8 @@
 
 .tv-container {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .container-right,
@@ -26,4 +28,19 @@
 .container-right p {
   font-size: 2.8rem;
   color: rgb(183, 50, 216);
+}
+
+@media screen and (max-width: 855px) {
+  .tv-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container-right p {
+    margin: 1rem;
+    font-size: 2rem;
+    color: rgb(183, 50, 216);
+  }
 }
