--- a/src/Components/Personal/index.css
+++ b/src/Components/Personal/index.css
@@ -5,12 +5,6 @@
   min-height: 78vh;
 }
 
-p {
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  font-size: 2rem;
-}
-
 .previous-page {
   height: 10%;
 }
@@ -32,4 +26,10 @@ p {
   color: rgb(255, 255, 255);
   border: 2px solid rgb(140, 0, 175);
   border-radius: 20px;
+}
+
+@media screen and (max-width: 923px) {
+  h2 {
+    font-size: 1.65rem;
+  }
 }
