--- a/src/Components/Body/FAQSection/index.css
+++ b/src/Components/Body/FAQSection/index.css
@@ -1,6 +1,8 @@
 .section-faq {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 90vh;
 }
 
@@ -35,4 +37,41 @@
 
 .faq-dropdown:hover .dropdown-content {
   display: block;
+}
+
+@media screen and (max-width: 700px) {
+  .section-faq {
+    height: 90vh;
+  }
+
+  .dropdown-title {
+    width: 30rem;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .dropdown-content li {
+    display: block;
+    text-align: center;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 0.6rem;
+    color: rgb(255, 255, 255);
+    background: rgba(183, 0, 255, 0.418);
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .section-faq {
+    height: 180vh;
+  }
+
+  .dropdown-title {
+    width: 20rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+  }
 }
