--- a/src/Components/Body/PhoneSection/index.css
+++ b/src/Components/Body/PhoneSection/index.css
@@ -1,9 +1,12 @@
 .section-phone {
-  height: 90vh;
+  height: 60vh;
 }
 
 .phone-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .container-right,
@@ -25,6 +28,28 @@ img {
 }
 
 .container-left p {
-  font-size: 2.8rem;
+  font-size: 2.7rem;
   color: rgb(183, 50, 216);
+}
+
+@media screen and (max-width: 831px) {
+  .section-phone {
+    height: 80vh;
+  }
+
+  img {
+    width: 18rem;
+  }
+
+  .container-left p {
+    margin: 1rem;
+    font-size: 1.9rem;
+    color: rgb(183, 50, 216);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .section-phone {
+    height: 60vh;
+  }
 }
