--- a/src/Components/Profile/index.css
+++ b/src/Components/Profile/index.css
@@ -153,3 +153,12 @@ input[type='text'] {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
+
+@media screen and (max-width: 700px) {
+  .profile__search {
+    margin: 0.8rem;
+    width: 20rem;
+    border-radius: 20px;
+    cursor: auto;
+  }
+}
