--- a/src/Components/ProfileHeader/index.css
+++ b/src/Components/ProfileHeader/index.css
@@ -48,3 +48,21 @@
   text-decoration: none;
   transition: 0.4s ease-in-out;
 }
+
+@media screen and (max-width: 700px) {
+  .profile-header__logo {
+    font-size: 2.8rem;
+  }
+
+  .profile-header__buttons {
+    margin: 0.1rem;
+    padding: 0.3rem;
+  }
+
+  .profile-header__button {
+    width: 4rem;
+    margin: 0.2rem;
+    padding: 0.3rem;
+    font-size: 0.9rem;
+  }
+}
