--- a/src/Components/Admin/index.css
+++ b/src/Components/Admin/index.css
@@ -171,4 +171,14 @@
     align-items: center;
     color: #ffffff;
   }
+
+  .movie__container-admin {
+    text-align: center;
+    padding: 0.5rem;
+    margin: 1rem;
+    height: 26rem;
+    width: 18rem;
+    background: rgba(0, 0, 0, 0.842);
+    border-radius: 20px;
+  }
 }
